Last random quote index moved to QuoteProvider class

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
       <div class="quote-action">
         <button class="next-quote" id="next-quote-btn">Next quote</button>
+        <!-- <button class="next-quote" id="next-quote-btn">Next quote</button> -->
         <span class="inactive-star star" id="star"></span>
       </div>
       <div id="favoriteQuotesContainer" class="favoriteQuotesContainer"></div>
