Add button for fetching random quotes via API

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         <p id="quote-author" class="quote-author">Quote's author</p>
       </div>
       <div class="quote-action">
-        <button class="next-quote" id="next-quote-btn">Next quote</button>
-        <!-- <button class="next-quote" id="next-quote-btn">Next quote</button> -->
+        <button class="random-quote-btn" id="local-quote-btn">
+          Saved Quote
+        </button>
+        <button class="random-quote-btn online" id="online-quote-btn">
+          Online Quote
+        </button>
         <span class="inactive-star star" id="star"></span>
       </div>
       <div id="favoriteQuotesContainer" class="favoriteQuotesContainer"></div>
