Integrate own API service to the client app

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,9 @@
         <button class="random-quote-btn" id="local-quote-btn">
           Saved Quote
         </button>
+        <button class="random-quote-btn server" id="server-quote-btn">
+          Server Quote
+        </button>
         <button class="random-quote-btn online" id="online-quote-btn">
           Online Quote
         </button>
