move favorites handler logic to FavoriteQuotesController and add removeAll button

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
         <span class="inactive-star star" id="star"></span>
       </div>
       <div id="favoriteQuotesContainer" class="favoriteQuotesContainer"></div>
+      <button class="remove-all-btn" id="remove-all-btn">Remove all</button>
     </div>
     <script src="index.js" type="module"></script>
   </body>
