--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,13 @@
       </div>
       <div id="favoriteQuotesContainer" class="favoriteQuotesContainer"></div>
       <button class="remove-all-btn" id="remove-all-btn">Remove all</button>
+      <div class="pagination-controls">
+        <button id="firstPageBtn" aria-label="First page">⏮</button>
+        <button id="prevPageBtn" aria-label="Previous page">←</button>
+        <span id="pageIndicator">Page 1</span>
+        <button id="nextPageBtn" aria-label="Next page">→</button>
+        <button id="lastPageBtn" aria-label="Last page">⏭</button>
+      </div>
     </div>
     <script src="index.js" type="module"></script>
   </body>
