Complete pagination logic + persist current page in localStorage

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
       <div class="pagination-controls">
         <button id="firstPageBtn" aria-label="First page">⏮</button>
         <button id="prevPageBtn" aria-label="Previous page">←</button>
-        <span id="pageIndicator">Page 1</span>
+        <span id="pageIndicator">Page 1 / 1</span>
         <button id="nextPageBtn" aria-label="Next page">→</button>
         <button id="lastPageBtn" aria-label="Last page">⏭</button>
       </div>
